tests/files/type_checker_tests/should_fail/051.cmdr
//Should fail since do while condition is not boolean
do {
	echo "hi";
} while ("hello");